tests/machine/x/ocaml/string_prefix_slice.error
File "/tmp/TestOCamlCompiler_VMValid_Goldenstring_prefix_slice763068114/001/string_prefix_slice.ml", line 10, characters 51-57:
10 |   print_endline ((string_slice s1 (0) (List.length prefix) = prefix));
                                                        ^^^^^^
Error: This expression has type string but an expression was expected of type
         'a list
