tests/machine/x/ocaml/string_prefix_slice.ml
(* Generated by Mochi compiler v0.10.27 on 1970-01-01T00:00:00Z *)
let string_slice s i j = String.sub s i (j - i)


let prefix : string = "fore"
let s1 : string = "forest"
let s2 : string = "desert"

let () =
  print_endline ((string_slice s1 (0) (List.length prefix) = prefix));
  print_endline ((string_slice s2 (0) (List.length prefix) = prefix));
